--- a/docs/api-reference/CRMScript.NetServer.NSAppointmentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointmentEntity.yml
@@ -306,15 +306,16 @@ items:
   nameWithType: NSAppointmentEntity.GetCautionWarning()
   fullName: CRMScript.NetServer.NSAppointmentEntity.GetCautionWarning()
   type: Method
-  summary: "\nStatus field to indicate appointments that have some sort of problem<p></p>\n<strong>Returns:</strong>NSAppointmentCautionWarning\n"
+  summary: "\nStatus field to indicate appointments that have some sort of problem\n"
   remarks: 
   syntax: 
-    content: NSAppointmentCautionWarning GetCautionWarning()
-    parameters:
+    content: Integer GetCautionWarning()
+    parameters: []
     return:
-      type: CRMScript.NetServer.NSAppointmentCautionWarning
+      type: CRMScript.Global.Integer
+      description: See <xref href=\"CRMScript.NetServer.AppointmentCautionWarning\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
-  - "\n<pre><code>NSAppointmentEntity thing;\nNSAppointmentCautionWarning cautionWarning  = thing.GetCautionWarning();</code></pre>\n"
+  - "\n<pre><code>NSAppointmentEntity thing;\nInteger cautionWarning  = thing.GetCautionWarning();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAppointmentEntity.GetCentralserviceVideomeetId()
   commentId: M:CRMScript.NetServer.NSAppointmentEntity.GetCentralserviceVideomeetId()
   id: 'GetCentralserviceVideomeetId()'
@@ -1394,12 +1395,12 @@ items:
   fullName: CRMScript.NetServer.NSAppointmentEntity.SetCautionWarning()
   type: Method
   summary: "\nStatus field to indicate appointments that have some sort of problem\n"
-  remarks: "\n<p>See enum CautionWarning.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.AppointmentCautionWarning\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
-    content: SetCautionWarning(NSAppointmentCautionWarning cautionWarning)
+    content: SetCautionWarning(Integer cautionWarning)
     parameters:
   example: 
-  - "\n<pre><code>NSAppointmentEntity thing;\nNSAppointmentCautionWarning cautionWarning;\nthing.SetCautionWarning(cautionWarning);</code></pre>\n"
+  - "\n<pre><code>NSAppointmentEntity thing;\nInteger cautionWarning;\nthing.SetCautionWarning(cautionWarning);</code></pre>\n"
 - uid: CRMScript.NetServer.NSAppointmentEntity.SetCentralserviceVideomeetId(String)
   commentId: M:CRMScript.NetServer.NSAppointmentEntity.SetCentralserviceVideomeetId(String)
   id: 'SetCentralserviceVideomeetId(String)'
@@ -2306,12 +2307,6 @@ references:
   name: NSAssociate
   nameWithType: NSAssociate
   fullName: CRMScript.NetServer.NSAssociate
-- uid: CRMScript.NetServer.NSAppointmentCautionWarning
-  commentId: T:CRMScript.NetServer.NSAppointmentCautionWarning
-  isExternal: true
-  name: NSAppointmentCautionWarning
-  nameWithType: NSAppointmentCautionWarning
-  fullName: CRMScript.NetServer.NSAppointmentCautionWarning
 - uid: CRMScript.Global.String
   commentId: T:CRMScript.Global.String
   isExternal: true
@@ -2450,3 +2445,9 @@ references:
   name: InvitationStatus
   nameWithType: InvitationStatus
   fullName: CRMScript.NetServer.InvitationStatus
+- uid: CRMScript.NetServer.AppointmentCautionWarning
+  commentId: T:CRMScript.NetServer.AppointmentCautionWarning
+  isExternal: true
+  name: AppointmentCautionWarning
+  nameWithType: AppointmentCautionWarning
+  fullName: CRMScript.NetServer.AppointmentCautionWarning
