--- a/docs/api-reference/CRMScript.NetServer.NSTaskListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTaskListItem.yml
@@ -259,15 +259,16 @@ items:
   nameWithType: NSTaskListItem.GetType()
   fullName: CRMScript.NetServer.NSTaskListItem.GetType()
   type: Method
-  summary: "\n1 = app, 2 = doc, 3 = email, 4 = fax, 5 = phone, 6 = todo* see EAppntRecordTypes<p></p>\n<strong>Returns:</strong>Integer\n"
+  summary: "\n1 = app, 2 = doc, 3 = email, 4 = fax, 5 = phone, 6 = todo* see EAppntRecordTypes\n"
   remarks: 
   syntax: 
     content: Integer GetType()
     parameters:
     return:
       type: CRMScript.Global.Integer
+      description: See <xref href=\"CRMScript.NetServer.TaskType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
-  - "\n<pre><code>NSTaskListItem thing;\nInteger type  = thing.GetType();</code></pre>\n"
+  - "\n<pre><code>NSTaskListItem thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTaskListItem.GetValue()
   commentId: M:CRMScript.NetServer.NSTaskListItem.GetValue()
   id: 'GetValue()'
@@ -533,15 +534,15 @@ items:
   fullName: CRMScript.NetServer.NSTaskListItem.SetType(Integer)
   type: Method
   summary: "\n1 = app, 2 = doc, 3 = email, 4 = fax, 5 = phone, 6 = todo* see EAppntRecordTypes\n"
-  remarks: "\n<p>See enum TaskType.</p>\n"
+  remarks: ""
   syntax: 
     content: SetType(Integer type)
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"CRMScript.NetServer.TaskType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
-  - "\n<pre><code>NSTaskListItem thing;\nTaskType type;\nthing.SetType(type);</code></pre>\n"
+  - "\n<pre><code>NSTaskListItem thing;\nInteger type;\nthing.SetType(type);</code></pre>\n"
 - uid: CRMScript.NetServer.NSTaskListItem.SetValue(String)
   commentId: M:CRMScript.NetServer.NSTaskListItem.SetValue(String)
   id: 'SetValue(String)'
