--- a/docs/api-reference/CRMScript.NetServer.TaskType.yml
+++ b/docs/api-reference/CRMScript.NetServer.TaskType.yml
@@ -1,6 +1,7 @@
 ### YamlMime:ManagedReference
 items:
 - uid: CRMScript.NetServer.TaskType
+  # Same as SuperOffice.Data.TaskType
   commentId: T:CRMScript.NetServer.TaskType
   id: TaskType
   langs:
@@ -21,7 +22,7 @@ items:
   nameWithType: TaskType
   fullName: CRMScript.NetServer.TaskType
   type: Enum
-  summary: 
+  summary: "Value for field record_type in table task. Controls icons used in GUI."
 - uid: CRMScript.NetServer.TaskType.Unknown
   commentId: F:CRMScript.NetServer.TaskType.Unknown
   id: TaskType.Unknown
@@ -31,7 +32,7 @@ items:
   nameWithType: TaskType.Unknown
   fullName: CRMScript.NetServer.TaskType.Unknown
   type: Field
-  summary: "\n0: Unknown\n"
+  summary: "\n0: This task is of an unknown/undecided type\n"
   syntax: 
     content: Unknown = 0
     type: CRMScript.NetServer.TaskType
@@ -44,7 +45,7 @@ items:
   nameWithType: TaskType.Appointment
   fullName: CRMScript.NetServer.TaskType.Appointment
   type: Field
-  summary: "\n1: Appointment\n"
+  summary: "\n1: The task is an appointment\n"
   syntax: 
     content: Appointment = 1
     type: CRMScript.NetServer.TaskType
@@ -57,7 +58,7 @@ items:
   nameWithType: TaskType.Document
   fullName: CRMScript.NetServer.TaskType.Document
   type: Field
-  summary: "\n2: Document\n"
+  summary: "\n2: The task is a document\n"
   syntax: 
     content: Document = 2
     type: CRMScript.NetServer.TaskType
@@ -70,7 +71,7 @@ items:
   nameWithType: TaskType.Email
   fullName: CRMScript.NetServer.TaskType.Email
   type: Field
-  summary: "\n3: Email\n"
+  summary: "\n3: The task is an email\n"
   syntax: 
     content: Email = 3
     type: CRMScript.NetServer.TaskType
@@ -83,7 +84,7 @@ items:
   nameWithType: TaskType.Fax
   fullName: CRMScript.NetServer.TaskType.Fax
   type: Field
-  summary: "\n4: Fax\n"
+  summary: "\n4: The task is a fax\n"
   syntax: 
     content: Fax = 4
     type: CRMScript.NetServer.TaskType
@@ -96,7 +97,7 @@ items:
   nameWithType: TaskType.Phone
   fullName: CRMScript.NetServer.TaskType.Phone
   type: Field
-  summary: "\n5: Phone\n"
+  summary: "\n5: The task is a phone call\n"
   syntax: 
     content: Phone = 5
     type: CRMScript.NetServer.TaskType
@@ -109,7 +110,7 @@ items:
   nameWithType: TaskType.ToDo
   fullName: CRMScript.NetServer.TaskType.ToDo
   type: Field
-  summary: "\n6: ToDo\n"
+  summary: "\n6: The task is a To-do\n"
   syntax: 
     content: ToDo = 6
     type: CRMScript.NetServer.TaskType
@@ -122,7 +123,7 @@ items:
   nameWithType: TaskType.MailMergeDraft
   fullName: CRMScript.NetServer.TaskType.MailMergeDraft
   type: Field
-  summary: "\n7: MailMergeDraft\n"
+  summary: "\n7: Mail merge draft document\n"
   syntax: 
     content: MailMergeDraft = 7
     type: CRMScript.NetServer.TaskType
@@ -135,7 +136,7 @@ items:
   nameWithType: TaskType.MailMergeFinal
   fullName: CRMScript.NetServer.TaskType.MailMergeFinal
   type: Field
-  summary: "\n8: MailMergeFinal\n"
+  summary: "\n8: Merged result of mail merge\n"
   syntax: 
     content: MailMergeFinal = 8
     type: CRMScript.NetServer.TaskType
@@ -148,7 +149,7 @@ items:
   nameWithType: TaskType.Report
   fullName: CRMScript.NetServer.TaskType.Report
   type: Field
-  summary: "\n9: Report\n"
+  summary: "\n9: Saved report run\n"
   syntax: 
     content: Report = 9
     type: CRMScript.NetServer.TaskType
@@ -161,7 +162,7 @@ items:
   nameWithType: TaskType.SaintAll
   fullName: CRMScript.NetServer.TaskType.SaintAll
   type: Field
-  summary: "\n10: SaintAll\n"
+  summary: "\n10: All choice for Saint, every activity is recorded under this type as well as the specific type. This is NOT an acceptable value for an individual activity\n"
   syntax: 
     content: SaintAll = 10
     type: CRMScript.NetServer.TaskType
