--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -11,7 +11,7 @@ items:
   - CRMScript.NetServer.action
   - CRMScript.NetServer.actionType
   - CRMScript.NetServer.active
-  - CRMScript.NetServer.activityStatus
+  - CRMScript.NetServer.ActivityStatus
   - CRMScript.NetServer.actorType
   - CRMScript.NetServer.actorTypeCrm
   - CRMScript.NetServer.actorTypeErp
@@ -27,7 +27,7 @@ items:
   - CRMScript.NetServer.BookingType
   - CRMScript.NetServer.calMethod
   - CRMScript.NetServer.calReplyStatus
-  - CRMScript.NetServer.CautionWarning
+  - CRMScript.NetServer.AppointmentCautionWarning
   - CRMScript.NetServer.changedOwner
   - CRMScript.NetServer.ChatSessionStatus
   - CRMScript.NetServer.checkEscalating
@@ -35,7 +35,6 @@ items:
   - CRMScript.NetServer.children
   - CRMScript.NetServer.closingStatus
   - CRMScript.NetServer.colorIndex
-  - CRMScript.NetServer.completedstate
   - CRMScript.NetServer.copyMembers
   - CRMScript.NetServer.countryId
   - CRMScript.NetServer.crmActorType
@@ -599,7 +598,7 @@ items:
   - CRMScript.NetServer.rankedFieldsIds
   - CRMScript.NetServer.readStatus
   - CRMScript.NetServer.recaptchaMode
-  - CRMScript.NetServer.RecurringPattern
+  - CRMScript.NetServer.RecurrencePattern
   - CRMScript.NetServer.relationToOwner
   - CRMScript.NetServer.reportCategory
   - CRMScript.NetServer.reportLayout
@@ -763,30 +762,24 @@ references:
   name: NSAppointment
   nameWithType: NSAppointment
   fullName: CRMScript.NetServer.NSAppointment
-- uid: CRMScript.NetServer.CautionWarning
-  commentId: T:CRMScript.NetServer.CautionWarning
+- uid: CRMScript.NetServer.AppointmentCautionWarning
+  commentId: T:CRMScript.NetServer.AppointmentCautionWarning
   isExternal: true
-  name: CautionWarning
-  nameWithType: CautionWarning
-  fullName: CRMScript.NetServer.CautionWarning
-- uid: CRMScript.NetServer.completedstate
-  commentId: T:CRMScript.NetServer.completedstate
-  isExternal: true
-  name: completedstate
-  nameWithType: completedstate
-  fullName: CRMScript.NetServer.completedstate
+  name: AppointmentCautionWarning
+  nameWithType: AppointmentCautionWarning
+  fullName: CRMScript.NetServer.AppointmentCautionWarning
 - uid: CRMScript.NetServer.AppointmentPrivate
   commentId: T:CRMScript.NetServer.AppointmentPrivate
   isExternal: true
   name: AppointmentPrivate
   nameWithType: AppointmentPrivate
   fullName: CRMScript.NetServer.AppointmentPrivate
-- uid: CRMScript.NetServer.RecurringPattern
-  commentId: T:CRMScript.NetServer.RecurringPattern
+- uid: CRMScript.NetServer.RecurrencePattern
+  commentId: T:CRMScript.NetServer.RecurrencePattern
   isExternal: true
-  name: RecurringPattern
-  nameWithType: RecurringPattern
-  fullName: CRMScript.NetServer.RecurringPattern
+  name: RecurrencePattern
+  nameWithType: RecurrencePattern
+  fullName: CRMScript.NetServer.RecurrencePattern
 - uid: CRMScript.NetServer.TaskType
   commentId: T:CRMScript.NetServer.TaskType
   isExternal: true
@@ -811,12 +804,12 @@ references:
   name: AppntRecordTypes
   nameWithType: AppntRecordTypes
   fullName: CRMScript.NetServer.AppntRecordTypes
-- uid: CRMScript.NetServer.activityStatus
-  commentId: T:CRMScript.NetServer.activityStatus
+- uid: CRMScript.NetServer.ActivityStatus
+  commentId: T:CRMScript.NetServer.ActivityStatus
   isExternal: true
-  name: activityStatus
-  nameWithType: activityStatus
-  fullName: CRMScript.NetServer.activityStatus
+  name: ActivityStatus
+  nameWithType: ActivityStatus
+  fullName: CRMScript.NetServer.ActivityStatus
 - uid: CRMScript.NetServer.NSAppointmentEntity
   commentId: T:CRMScript.NetServer.NSAppointmentEntity
   isExternal: true
