--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -1154,8 +1154,8 @@ items:
       href: CRMScript.NetServer.actionType.yml
     - name: Enum active
       href: CRMScript.NetServer.active.yml
-    - name: Enum activityStatus
-      href: CRMScript.NetServer.activityStatus.yml
+    - name: ActivityStatus
+      href: CRMScript.NetServer.ActivityStatus.yml
     - name: Enum actorType
       href: CRMScript.NetServer.actorType.yml
     - name: Enum actorTypeCrm
@@ -1164,9 +1164,11 @@ items:
       href: CRMScript.NetServer.actorTypeErp.yml
     - name: AddressType
       href: CRMScript.NetServer.AddressType.yml
+    - name: AppointmentCautionWarning
+      href: CRMScript.NetServer.AppointmentCautionWarning.yml
     - name: Enum AppntRecordTypes
       href: CRMScript.NetServer.AppntRecordTypes.yml
-    - name: Enum AppointmentPrivate
+    - name: AppointmentPrivate
       href: CRMScript.NetServer.AppointmentPrivate.yml
     - name: AppointmentType
       href: CRMScript.NetServer.AppointmentType.yml
@@ -1186,8 +1188,6 @@ items:
       href: CRMScript.NetServer.calMethod.yml
     - name: Enum calReplyStatus
       href: CRMScript.NetServer.calReplyStatus.yml
-    - name: Enum CautionWarning
-      href: CRMScript.NetServer.CautionWarning.yml
     - name: Enum changedOwner
       href: CRMScript.NetServer.changedOwner.yml
     - name: Enum ChatSessionStatus
@@ -1202,8 +1202,6 @@ items:
       href: CRMScript.NetServer.closingStatus.yml
     - name: Enum colorIndex
       href: CRMScript.NetServer.colorIndex.yml
-    - name: Enum completedstate
-      href: CRMScript.NetServer.completedstate.yml
     - name: Enum copyMembers
       href: CRMScript.NetServer.copyMembers.yml
     - name: Enum countryId
@@ -1328,8 +1326,8 @@ items:
       href: CRMScript.NetServer.readStatus.yml
     - name: Enum recaptchaMode
       href: CRMScript.NetServer.recaptchaMode.yml
-    - name: Enum RecurringPattern
-      href: CRMScript.NetServer.RecurringPattern.yml
+    - name: RecurrencePattern
+      href: CRMScript.NetServer.RecurrencePattern.yml
     - name: Enum relationToOwner
       href: CRMScript.NetServer.relationToOwner.yml
     - name: Enum reportCategory
@@ -1384,7 +1382,7 @@ items:
       href: CRMScript.NetServer.sysMaxLevel.yml
     - name: Enum tableRights
       href: CRMScript.NetServer.tableRights.yml
-    - name: Enum TaskType
+    - name: TaskType
       href: CRMScript.NetServer.TaskType.yml
     - name: Enum theme
       href: CRMScript.NetServer.theme.yml
