--- a/docs/api-reference/CRMScript.NetServer.AppointmentPrivate.yml
+++ b/docs/api-reference/CRMScript.NetServer.AppointmentPrivate.yml
@@ -1,6 +1,7 @@
 ### YamlMime:ManagedReference
 items:
 - uid: CRMScript.NetServer.AppointmentPrivate
+  # Same as SuperOffice.Data.AppointmentPrivate
   commentId: T:CRMScript.NetServer.AppointmentPrivate
   id: AppointmentPrivate
   langs:
@@ -13,7 +14,7 @@ items:
   nameWithType: AppointmentPrivate
   fullName: CRMScript.NetServer.AppointmentPrivate
   type: Enum
-  summary: 
+  summary: "\nValue for field private in table appointment.\n"
 - uid: CRMScript.NetServer.AppointmentPrivate.Public
   commentId: F:CRMScript.NetServer.AppointmentPrivate.Public
   id: AppointmentPrivate.Public
@@ -23,7 +24,7 @@ items:
   nameWithType: AppointmentPrivate.Public
   fullName: CRMScript.NetServer.AppointmentPrivate.Public
   type: Field
-  summary: "\n0: Public\n"
+  summary: "\n0: This appointment can be read by anyone\n"
   syntax: 
     content: Public = 0
     type: CRMScript.NetServer.AppointmentPrivate
@@ -36,7 +37,7 @@ items:
   nameWithType: AppointmentPrivate.PrivateUser
   fullName: CRMScript.NetServer.AppointmentPrivate.PrivateUser
   type: Field
-  summary: "\n1: PrivateUser\n"
+  summary: "\n1: This appointment can only be read/seen by the owner\n"
   syntax: 
     content: PrivateUser = 1
     type: CRMScript.NetServer.AppointmentPrivate
@@ -49,7 +50,7 @@ items:
   nameWithType: AppointmentPrivate.PrivateGroup
   fullName: CRMScript.NetServer.AppointmentPrivate.PrivateGroup
   type: Field
-  summary: "\n2: PrivateGroup\n"
+  summary: "\n2: This appointment can only be read by members of the owners group\n"
   syntax: 
     content: PrivateGroup = 2
     type: CRMScript.NetServer.AppointmentPrivate
