#9 Updated NSAppointmentAgent and related enums

--- a/docs/api-reference/CRMScript.NetServer.NSDocumentTemplate.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentTemplate.yml
@@ -198,13 +198,14 @@ items:
   nameWithType: NSDocumentTemplate.GetRecordType()
   fullName: CRMScript.NetServer.NSDocumentTemplate.GetRecordType()
   type: Method
-  summary: "\n1 = app, 2 = doc, 3 = email, 4 = fax, 5 = phone, 6 = todo* see EAppntRecordTypes<p></p>\n<strong>Returns:</strong>NSDocTmplType\n"
+  summary: "\n1 = app, 2 = doc, 3 = email, 4 = fax, 5 = phone, 6 = todo See <xref href=\"CRMScript.NetServer.TaskType\" data-throw-if-not-resolved=\"false\"></xref><p></p>\n<strong>Returns:</strong>NSDocTmplType\n"
   remarks: 
   syntax: 
     content: NSDocTmplType GetRecordType()
     parameters:
     return:
       type: CRMScript.NetServer.NSDocTmplType
+      description:
   example: 
   - "\n<pre><code>NSDocumentTemplate thing;\nNSDocTmplType recordType  = thing.GetRecordType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentTemplate.GetSaveInDb()
@@ -430,8 +431,8 @@ items:
   nameWithType: NSDocumentTemplate.SetRecordType(NSDocTmplType)
   fullName: CRMScript.NetServer.NSDocumentTemplate.SetRecordType(NSDocTmplType)
   type: Method
-  summary: "\n1 = app, 2 = doc, 3 = email, 4 = fax, 5 = phone, 6 = todo* see EAppntRecordTypes\n"
-  remarks: "\n<p>See enum AppntRecordTypes.</p>\n"
+  summary: "\n1 = app, 2 = doc, 3 = email, 4 = fax, 5 = phone, 6 = todo\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.TaskType\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: SetRecordType(NSDocTmplType recordType)
     parameters:
@@ -517,3 +518,9 @@ references:
   name: NSDocTmplType
   nameWithType: NSDocTmplType
   fullName: CRMScript.NetServer.NSDocTmplType
+- uid: CRMScript.NetServer.TaskType
+  commentId: T:CRMScript.NetServer.TaskType
+  isExternal: true
+  name: TaskType
+  nameWithType: TaskType
+  fullName: CRMScript.NetServer.TaskType
