--- a/docs/api-reference/CRMScript.NetServer.NSDocumentTemplateEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentTemplateEntity.yml
@@ -435,7 +435,7 @@ items:
   nameWithType: NSDocumentTemplateEntity.GetRecordType()
   fullName: CRMScript.NetServer.NSDocumentTemplateEntity.GetRecordType()
   type: Method
-  summary: "\n1 = app, 2 = doc, 3 = email, 4 = fax, 5 = phone, 6 = todo* see EAppntRecordTypes<p></p>\n<strong>Returns:</strong>NSDocTmplType\n"
+  summary: "\n1 = app, 2 = doc, 3 = email, 4 = fax, 5 = phone, 6 = todo See <xref href=\"CRMScript.NetServer.TaskType\" data-throw-if-not-resolved=\"false\"></xref><p></p>\n<strong>Returns:</strong>NSDocTmplType\n"
   remarks: 
   syntax: 
     content: NSDocTmplType GetRecordType()
@@ -935,8 +935,8 @@ items:
   nameWithType: NSDocumentTemplateEntity.SetRecordType(NSDocTmplType)
   fullName: CRMScript.NetServer.NSDocumentTemplateEntity.SetRecordType(NSDocTmplType)
   type: Method
-  summary: "\n1 = app, 2 = doc, 3 = email, 4 = fax, 5 = phone, 6 = todo* see EAppntRecordTypes\n"
-  remarks: "\n<p>See enum AppntRecordTypes.</p>\n"
+  summary: "\n1 = app, 2 = doc, 3 = email, 4 = fax, 5 = phone, 6 = todo See <xref href=\"CRMScript.NetServer.TaskType\" data-throw-if-not-resolved=\"false\"></xref>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.TaskType\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: SetRecordType(NSDocTmplType recordType)
     parameters:
@@ -1103,3 +1103,9 @@ references:
   name: NSSenderMailMode
   nameWithType: NSSenderMailMode
   fullName: CRMScript.NetServer.NSSenderMailMode
+- uid: CRMScript.NetServer.TaskType
+  commentId: T:CRMScript.NetServer.TaskType
+  isExternal: true
+  name: TaskType
+  nameWithType: TaskType
+  fullName: CRMScript.NetServer.TaskType
