--- a/docs/api-reference/CRMScript.NetServer.NSTaskListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTaskListItem.yml
@@ -259,7 +259,7 @@ items:
   nameWithType: NSTaskListItem.GetType()
   fullName: CRMScript.NetServer.NSTaskListItem.GetType()
   type: Method
-  summary: "\n1 = app, 2 = doc, 3 = email, 4 = fax, 5 = phone, 6 = todo* see EAppntRecordTypes\n"
+  summary: "\n1 = app, 2 = doc, 3 = email, 4 = fax, 5 = phone, 6 = todo See <xref href=\"CRMScript.NetServer.TaskType\" data-throw-if-not-resolved=\"false\"></xref>\n"
   remarks: 
   syntax: 
     content: Integer GetType()
@@ -533,7 +533,7 @@ items:
   nameWithType: NSTaskListItem.SetType(Integer)
   fullName: CRMScript.NetServer.NSTaskListItem.SetType(Integer)
   type: Method
-  summary: "\n1 = app, 2 = doc, 3 = email, 4 = fax, 5 = phone, 6 = todo* see EAppntRecordTypes\n"
+  summary: "\n1 = app, 2 = doc, 3 = email, 4 = fax, 5 = phone, 6 = todo See <xref href=\"CRMScript.NetServer.TaskType\" data-throw-if-not-resolved=\"false\"></xref>\n"
   remarks: ""
   syntax: 
     content: SetType(Integer type)
@@ -588,3 +588,9 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
+- uid: CRMScript.NetServer.TaskType
+  commentId: T:CRMScript.NetServer.TaskType
+  isExternal: true
+  name: TaskType
+  nameWithType: TaskType
+  fullName: CRMScript.NetServer.TaskType
