--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -16,7 +16,6 @@ items:
   - CRMScript.NetServer.actorTypeCrm
   - CRMScript.NetServer.actorTypeErp
   - CRMScript.NetServer.AddressType
-  - CRMScript.NetServer.AppntRecordTypes
   - CRMScript.NetServer.AppointmentPrivate
   - CRMScript.NetServer.AppointmentType
   - CRMScript.NetServer.archivedState
@@ -598,6 +597,7 @@ items:
   - CRMScript.NetServer.readStatus
   - CRMScript.NetServer.recaptchaMode
   - CRMScript.NetServer.RecurrencePattern
+  - CRMScript.NetServer.RecurrenceUpdateMode
   - CRMScript.NetServer.relationToOwner
   - CRMScript.NetServer.reportCategory
   - CRMScript.NetServer.reportLayout
@@ -634,7 +634,6 @@ items:
   - CRMScript.NetServer.ticketRead
   - CRMScript.NetServer.timeCounter
   - CRMScript.NetServer.type
-  - CRMScript.NetServer.updateMode
   - CRMScript.NetServer.urlEncoding
   - CRMScript.NetServer.userGroupId
   - CRMScript.NetServer.userValueOverride
@@ -791,18 +790,12 @@ references:
   name: NSAppointmentAgent
   nameWithType: NSAppointmentAgent
   fullName: CRMScript.NetServer.NSAppointmentAgent
-- uid: CRMScript.NetServer.updateMode
-  commentId: T:CRMScript.NetServer.updateMode
+- uid: CRMScript.NetServer.RecurrenceUpdateMode
+  commentId: T:CRMScript.NetServer.RecurrenceUpdateMode
   isExternal: true
-  name: updateMode
-  nameWithType: updateMode
-  fullName: CRMScript.NetServer.updateMode
-- uid: CRMScript.NetServer.AppntRecordTypes
-  commentId: T:CRMScript.NetServer.AppntRecordTypes
-  isExternal: true
-  name: AppntRecordTypes
-  nameWithType: AppntRecordTypes
-  fullName: CRMScript.NetServer.AppntRecordTypes
+  name: RecurrenceUpdateMode
+  nameWithType: RecurrenceUpdateMode
+  fullName: CRMScript.NetServer.RecurrenceUpdateMode
 - uid: CRMScript.NetServer.ActivityStatus
   commentId: T:CRMScript.NetServer.ActivityStatus
   isExternal: true
