--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -1164,8 +1164,6 @@ items:
       href: CRMScript.NetServer.AddressType.yml
     - name: AppointmentCautionWarning
       href: CRMScript.NetServer.AppointmentCautionWarning.yml
-    - name: Enum AppntRecordTypes
-      href: CRMScript.NetServer.AppntRecordTypes.yml
     - name: AppointmentPrivate
       href: CRMScript.NetServer.AppointmentPrivate.yml
     - name: AppointmentType
@@ -1326,6 +1324,8 @@ items:
       href: CRMScript.NetServer.recaptchaMode.yml
     - name: RecurrencePattern
       href: CRMScript.NetServer.RecurrencePattern.yml
+    - name: RecurrenceUpdateMode
+      href: CRMScript.NetServer.RecurrenceUpdateMode.yml
     - name: Enum relationToOwner
       href: CRMScript.NetServer.relationToOwner.yml
     - name: Enum reportCategory
@@ -1398,8 +1398,6 @@ items:
       href: CRMScript.NetServer.timeCounter.yml
     - name: Enum type
       href: CRMScript.NetServer.type.yml
-    - name: Enum updateMode
-      href: CRMScript.NetServer.updateMode.yml
     - name: Enum urlEncoding
       href: CRMScript.NetServer.urlEncoding.yml
     - name: Enum userGroupId
